TEST_PROGRAMS/VALID/05/loop_miss_3rd_part.go
/* Three-part loop missing the third part. */

package main

func main() {
	for i := 0 ; i < 10 ; {
    	i++
    }
}
