TEST_PROGRAMS/INVALID/05/loop_with_parentheses.go
/* Loop with surrounding parentheses. */

package main

func main() {
	for (i := 0 ; i < 2 ; i++) { // Error: Can't have parentheses.
		// Do nothing.
	}
}
